// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Splash should  render  dark theme 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 iaiHKx"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex flex-col flex-1 justify-center text-center select-none"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mx-auto w-64 lg:w-96"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="mt-8"
            data-testid="Splash__text"
          >
            <h1
              class="text-4xl font-extrabold"
            >
              ARK Desktop Wallet
            </h1>
            <p
              class="animate-pulse text-theme-secondary-text"
            >
              Initializing...
            </p>
            <div
              class="flex justify-center mt-4"
            >
              <div
                class="animate-spin"
              >
                <svg
                  height="40"
                  viewBox="0 0 40 40"
                  width="40"
                >
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-secondary-800)"
                    stroke-width="2"
                  />
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-primary-600)"
                    stroke-dasharray="119.38052083641213"
                    stroke-dashoffset="95.50441666912971"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    transform="rotate(-90 20 20)"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex fixed right-0 left-0 bottom-5 justify-center items-center text-xs font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="Splash__footer"
          >
            <div>
              2020 © ARK.io
            </div>
            <div
              class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div>
              All Rights Reserved
            </div>
            <div
              class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div
              class="Splash__LogoContainer-sc-1ulyvw-0 hJYohG"
            >
              <svg
                width="18"
              >
                ark-logo.svg
              </svg>
            </div>
            <div>
              An ARK.io Product
            </div>
            <div
              class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div>
              Version 3.0.0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Splash should  render  light theme 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 iaiHKx"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex flex-col flex-1 justify-center text-center select-none"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mx-auto w-64 lg:w-96"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="mt-8"
            data-testid="Splash__text"
          >
            <h1
              class="text-4xl font-extrabold"
            >
              ARK Desktop Wallet
            </h1>
            <p
              class="animate-pulse text-theme-secondary-text"
            >
              Initializing...
            </p>
            <div
              class="flex justify-center mt-4"
            >
              <div
                class="animate-spin"
              >
                <svg
                  height="40"
                  viewBox="0 0 40 40"
                  width="40"
                >
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-success-200)"
                    stroke-width="2"
                  />
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-primary-600)"
                    stroke-dasharray="119.38052083641213"
                    stroke-dashoffset="95.50441666912971"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    transform="rotate(-90 20 20)"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex fixed right-0 left-0 bottom-5 justify-center items-center text-xs font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="Splash__footer"
          >
            <div>
              2020 © ARK.io
            </div>
            <div
              class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div>
              All Rights Reserved
            </div>
            <div
              class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div
              class="Splash__LogoContainer-sc-1ulyvw-0 hJYohG"
            >
              <svg
                width="18"
              >
                ark-logo.svg
              </svg>
            </div>
            <div>
              An ARK.io Product
            </div>
            <div
              class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div>
              Version 3.0.0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Splash should render without year 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 iaiHKx"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex flex-col flex-1 justify-center text-center select-none"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="mx-auto w-64 lg:w-96"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="mt-8"
            data-testid="Splash__text"
          >
            <h1
              class="text-4xl font-extrabold"
            >
              ARK Desktop Wallet
            </h1>
            <p
              class="animate-pulse text-theme-secondary-text"
            >
              Initializing...
            </p>
            <div
              class="flex justify-center mt-4"
            >
              <div
                class="animate-spin"
              >
                <svg
                  height="40"
                  viewBox="0 0 40 40"
                  width="40"
                >
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-secondary-800)"
                    stroke-width="2"
                  />
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-primary-600)"
                    stroke-dasharray="119.38052083641213"
                    stroke-dashoffset="95.50441666912971"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    transform="rotate(-90 20 20)"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex fixed right-0 left-0 bottom-5 justify-center items-center text-xs font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="Splash__footer"
          >
            <div>
              2020 © ARK.io
            </div>
            <div
              class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div>
              All Rights Reserved
            </div>
            <div
              class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div
              class="Splash__LogoContainer-sc-1ulyvw-0 hJYohG"
            >
              <svg
                width="18"
              >
                ark-logo.svg
              </svg>
            </div>
            <div>
              An ARK.io Product
            </div>
            <div
              class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div>
              Version 3.0.0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
